# FID

./: LICENSE  README.md  pyproject.toml
fid/: fid.py  welcome.py
fid-jobs/: audio.py  frames.py  info.py  mute.py
fid.egg-info/: PKG-INFO  SOURCES.txt
fid_jobs/: compressor.py  frames.py  gif.py  mute.py
initial files/: error-handling.py
